# python-hpc

./: .gitignore  Makefile  README.md  check_env.py  requirements.txt  todo.md
ipynb/: 000_about.ipynb  001_intro_first_steps.ipynb  002_intro_language.ipynb  003_basic_statements.ipynb  004_functions.ipynb  005_readwritefiles.ipynb  006_import_standard_library.ipynb  007_data_struct.ipynb  008_oop_encapsulation.ipynb  009_oop_inheritance.ipynb  00_introduction.ipynb  010_Mercurial_and_Gitlab.ipynb  02_Mercurial_and_Gitlab.ipynb  10_numpy_scipy.ipynb  12_pandas.ipynb  20_packaging.ipynb  20_profiling.ipynb  21_intro_HPC.ipynb  21_pres_algos_dtw_cort.ipynb  30_wrapping.ipynb  31_accelerators.ipynb  40_parallel.ipynb  41_cluster.ipynb  42_personal_projects.ipynb  custom.css  make_index.py  pres00_matplotlib_2.ipynb  pres01_profiling.ipynb  pres10_parallelisation.ipynb  slides_reveal.tpl  slides_reveal_wide.tpl
ipynb/files/: person.txt
old_snippet/multiprocessing/: demo_pool_map.py
pyfiles/: helloworld.py  wrong.py
pyfiles/dtw_cort_dist/: README.md  data_medium.npy  ref_small_cort.npy  ref_small_dtw.npy  requirements.txt  tasks.py  util.py
pyfiles/example0/: prog.py  util.py
pyfiles/example1/: prog.py  util.py
pyfiles/f2py/: file_to_wrap.f90  file_to_wrap2.f90
pyfiles/mypackuga/: Makefile  README.rst  setup.cfg  setup.py
pyfiles/mypackuga/doc/: Makefile  conf.py  index.rst
pyfiles/mypackuga/mypackuga/: __init__.py  raccoon.py  test_raccoon.py
snippet/cffi/: README.md  README.txt
snippet/concurent/: demo_future.py
snippet/dtw_cort_dist/: data.npy
(+65 files in other folders)
