[metadata]
name = mypackuga
version = 0.0.1
description = My package description (racoon shower)
long_description = file: README.rst
keywords = uga, raccoon
license = CeCILL
classifiers =
    Intended Audience :: Education
    License :: OSI Approved :: GNU General Public License v2 (GPLv2)
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6

[options.extras_require]
test =
    pytest
    pytest-cov

doc =
    sphinx
    sphinx_rtd_theme
    numpydoc
	jupyter

dev =
    %(doc)s
    %(test)s
